adding a new xxxx

--- a/css/style.css
+++ b/css/style.css
@@ -354,3 +354,6 @@ background: -moz-linear-gradient(90deg,#b1ff6e 0%, #bcff64 100%);
     color: var(--bg-color);
 }
 
+.xxxxx{
+    display: block;
+}
